--- a/index.html
+++ b/index.html
@@ -2,5 +2,13 @@
 layout: default
 ---
 <section id="home">
-  <h1>The Big Bang Theory</h1>
+  <div class="vcenter">
+    <h1>The Big Bang Theory</h1>
+    <div class="links">
+      <a href="">About</a>
+      <a href="">Episodes</a>
+      <a href="">Blog</a>
+      <a href="">Contact</a>
+    </div>
+  </div>
 </section>
