--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <section id="home">
   <div class="vcenter">
-    <h1>The Big Bang Theory</h1>
+    <h1 class="wow bounceInUp">The Big Bang Theory</h1>
     <div class="links">
       <a href="">About</a>
       <a href="">Episodes</a>
