Add other page holders

--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@ title: About the team
 permalink: /about/
 ---
 
+<h1>About</h1>
 <p>The Big Bang Theory (also abbreviated as TBBT) is an American sitcom created by Chuck Lorre and Bill Prady, both of whom serve as executive producers on the show along with Steven Molaro.</p>
 <p>The show premiered on CBS on September 24, 2007.[4] The ninth season premiered on September 21, 2015.</p>
 <p>The show is primarily centered on five characters living in Pasadena, California: Leonard Hofstadter and Sheldon Cooper, both physicists at Caltech, who share an apartment</p>
