Add banner and content to about page

--- a/about.html
+++ b/about.html
@@ -5,7 +5,43 @@ permalink: /about/
 position: 1
 ---
 
-<h1>About</h1>
-<p>The Big Bang Theory (also abbreviated as TBBT) is an American sitcom created by Chuck Lorre and Bill Prady, both of whom serve as executive producers on the show along with Steven Molaro.</p>
-<p>The show premiered on CBS on September 24, 2007.[4] The ninth season premiered on September 21, 2015.</p>
-<p>The show is primarily centered on five characters living in Pasadena, California: Leonard Hofstadter and Sheldon Cooper, both physicists at Caltech, who share an apartment</p>
+<section id="about">
+  <img src="{{ "/images/banner.jpg" | prepend: site.baseurl }}" alt="" class="img-responsive">
+  <h2>Introduction</h2>
+  <p>The Big Bang Theory (also abbreviated as TBBT) is an American sitcom created by Chuck Lorre and Bill Prady, both of whom serve as executive producers on the show along with Steven Molaro.</p>
+  <p>The show premiered on CBS on September 24, 2007.[4] The ninth season premiered on September 21, 2015.</p>
+  <p>The show is primarily centered on five characters living in Pasadena, California: Leonard Hofstadter and Sheldon Cooper, both physicists at Caltech, who share an apartment. Penny, a waitress and aspiring actress who later becomes a pharmaceutical representative, and who lives across the hall; and Leonard and Sheldon's similarly geeky and socially awkward friends and co-workers, aerospace engineer Howard Wolowitz and astrophysicist Raj Koothrappali. Geekiness and intellect of the four guys is contrasted for comic effect with Penny's social skills and common sense.</p>
+  <p>Over time, supporting characters have been promoted to starring roles: Bernadette Rostenkowski, Howard's girlfriend (later his wife), a microbiologist and former part-time waitress alongside Penny; neuroscientist Amy Farrah Fowler, who joins the group after being matched to Sheldon on a dating website (and later becomes Sheldon's girlfriend); Stuart Bloom, the cash-strapped owner of the comic book store the characters often visit, who, in season 8, moves in with Howard's mother; and Emily Sweeney, a dermatologist who dates Raj and has a fascination with the macabre.</p>
+
+
+  <h2>Sheldon Cooper</h2>
+  <img height=100 width=80 src="{{ "/images/sheldon.jpg" | prepend: site.baseurl }}" class="img-circle pull-right img-thumbnail-small avatar">
+  <p>Jim Parsons as Sheldon Cooper, M.A., M.S, Ph.D., Sc.D., B.S. – Originally from Galveston, Texas, he was a child prodigy with an eidetic memory who began college at the age of 11 (after completing the fifth grade), started graduate studies at 14, and earned a PhD at 16.</p>
+  <p>A theoretical physicist researching quantum mechanics and string theory, he has two master's degrees, a PhD, and an Sc.D. However, despite his IQ of 187, he finds many routine aspects of social situations and life in general difficult to understand and navigate. His father died when he was 14, and his mother, Mary (Laurie Metcalf) is a devout Christian.</p>
+
+  <h2>Leonard Hofstadter</h2>
+  <img height=100 width=80 src="{{ "/images/leonard.jpg" | prepend: site.baseurl }}" class="img-circle pull-right img-thumbnail avatar">
+  <p>Johnny Galecki as Leonard Hofstadter, PhD – An experimental physicist with an IQ of 173, he received his PhD when he was 24 years old. His mother, Beverly (Christine Baranski), is a neuroscientist and psychiatrist who provided little, if any, nurturing when Leonard was growing up.</p>
+  <p>Like all of the other major male characters, he is a nerd who loves video games, comic books and Dungeons & Dragons. Leonard is also lactose intolerant. The straight man of the series, he shares an apartment in Pasadena with Sheldon. Leonard is smitten with his neighbor Penny when they first meet.</p>
+
+  <h2>Raj Koothrappali</h2>
+  <img height=100 width=80 src="{{ "/images/raj.jpg" | prepend: site.baseurl }}" class="img-circle pull-right img-thumbnail avatar">
+  <p>Kunal Nayyar as Rajesh Ramayan "Raj" Koothrappali, PhD – From New Delhi, India, he works as a particle astrophysicist at Caltech. His family is very wealthy (Sheldon describes them as "Richie Rich rich"). Over the course of the series he communicates with his parents, Dr. and Mrs. V.M. Koothrappali (Brian George and Alice Amter), via webcam (they later divorce in season 8). </p>
+  <p>He is very shy around women and is unable to talk to them for the first six seasons (except for his mother and his sister), unless he drinks alcohol (or at least thinks he has drunk it) or takes an experimental medication. Unfortunately, the former gives him an outrageous, unpredictable personality, while the latter causes unforeseen side effects. Even so, he often has better luck with women than his overly confident best friend, Howard.</p>
+
+  <h2>Howard Wolowitz</h2>
+  <img height=100 width=80 src="{{ "/images/howard.jpg" | prepend: site.baseurl }}" class="img-circle pull-right img-thumbnail avatar">
+  <p>Simon Helberg as Howard Joel Wolowitz, M.Eng. – An aerospace engineer, Howard is Jewish (although not religious) and lives with his mother Debbie (Carol Ann Susi). His father left both of them when he was 11 and has not heard from him since, with the exception of a letter on his eighteenth birthday, which he refused to open. In season 8, he discovers he has a half-brother, Josh (Matt Bennett).</p>
+  <p>Unlike Sheldon, Leonard and Raj, Howard lacks a PhD, earning him Sheldon's scorn. He defends this by pointing out that he has a master's degree in engineering from the elite MIT and that the apparatus he designs are launched into space, unlike the purely abstract work of his friends. He himself goes into space at the end of season 5, training as an astronaut and serving as a payload specialist on the International Space Station, although he often annoys his friends by constantly talking about space. He has a marked sense of humor, which Leonard and Raj occasionally appreciate.</p>
+
+  <h2>Penny</h2>
+  <img height=100 width=80 src="{{ "/images/penny.jpg" | prepend: site.baseurl }}" class="img-circle pull-right img-thumbnail avatar">
+  <p>Kaley Cuoco as Penny – An aspiring actress from a town outside of Omaha, Nebraska, Penny lives across the hall from Sheldon and Leonard. She attends casting calls and auditions, but is not very successful. To pay the bills, she is a waitress and occasional bartender at The Cheesecake Factory, although she usually relies on the guys for free food and help paying her rent (Sheldon once called her a 'freeloader').</p>
+  <p> Penny quits her job in season 7 and at the start of season 8 becomes a pharmaceutical representative at Zangen after having given up hope of becoming a successful actress and finally gains financial independence. Penny attended, but did not graduate from a community college (she briefly goes back to school in season 6), but has far more common sense and social awareness than the rest of the gang.</p>
+
+
+  <h2>Bernadette Rostenkowski-Wolowitz</h2>
+  <img height=100 width=80 src="{{ "/images/bernadette.jpg" | prepend: site.baseurl }}" class="img-circle pull-right img-thumbnail avatar">
+  <p>Melissa Rauch as Bernadette Rostenkowski-Wolowitz, PhD (recurring season 3, starring since season 4) – a young woman with a very high-pitched voice who is initially a waitress co-worker of Penny's, paying her way through graduate school, studying microbiology. Bernadette is of Polish origin and was raised in a Catholic household. Her father Mike (Casey Sander) is a toughened retired police officer and she has four other siblings.</p>
+  <p>Bernadette is introduced to Howard by Penny as a result of an agreement between Howard and Leonard that if either ever ended up with a hot girlfriend, he would get the girlfriend to introduce the other to "a hot chick". At first, they do not get along, apparently having nothing in common, until they find out that they both have overbearing mothers.</p>
+</section>
