--- a/episodes.html
+++ b/episodes.html
@@ -5,4 +5,29 @@ permalink: /episodes/
 position: 2
 ---
 
-<h1>Episodes</h1>
+{% assign seasons = site.data.seasons %}
+<div id="episodes">
+  <h1>Episodes</h1>
+  <div class="row">
+    <aside class="col-sm-3 list-group" id="season-selector">
+      {% for season in seasons %}
+        <a href="#/season-{{season.seasonCode}}" class="list-group-item">{{season.seasonTitle}}</a>
+      {% endfor %}
+    </aside>
+    <section class="col-sm-9" id="episode-details">
+      {% for season in seasons %}
+        <article class="episodes list-group">
+          {% for episode in season.episodes %}
+            <div class="list-group-item">
+              <h4 class="list-group-item-heading">{{ season.seasonCode}}{{ episode.episodeCode }}: {{episode.title}}</h4>
+              <p class="list-group-item-text">
+                Directed by: {{episode.director}}; Aired on: {{episode.airDate}}
+              </p>
+            </div>
+          {% endfor %}
+        </article>
+      {% endfor %}
+    </section>
+  </div>
+
+</div>
